--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,31 @@
 	<link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.7/semantic.min.css">
 </head>
 <body ng-app="ergo">
-	<ng-view>
-	</ng-view>
+	<div class="ui menu">
+		<div class="ui container">
+			<div class="header item">
+				ergo
+			</div>
+			<div class="right menu">
+				<a class="item">
+					My arguments
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="ui grid container">
+		<div class="row">
+			<div class="column">
+				<div class="content">
+					<ng-view>
+					</ng-view>
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
+	
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular-route.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular-resource.min.js"></script>
