Interfacing between client & server.
 Changes to be committed:
	modified:   README.md
	modified:   api/controllers/controller.account.js
	modified:   api/lib/filters.js
	modified:   api/lib/lib.js
	modified:   api/routes/routes.js
	new file:   public/app/api/api.service.js
	new file:   public/app/api/api.service.js.map
	new file:   public/app/api/api.service.ts
	modified:   public/app/app.component.js
	modified:   public/app/app.component.js.map
	modified:   public/app/app.component.ts
	deleted:    public/app/argument/argument.list.component.js.map
	new file:   public/app/argument/detail/argument.detail.component.js
	new file:   public/app/argument/detail/argument.detail.component.js.map
	new file:   public/app/argument/detail/argument.detail.component.ts
	new file:   public/app/argument/list/argument.list.component.js
	new file:   public/app/argument/list/argument.list.component.js.map
	new file:   public/app/argument/list/argument.list.component.ts
	modified:   public/app/boot.js
	modified:   public/app/boot.js.map
	modified:   public/app/boot.ts
	renamed:    public/app/argument/argument.list.component.js -> public/app/home/home.component.js
	new file:   public/app/home/home.component.js.map
	renamed:    public/app/argument/argument.list.component.ts -> public/app/home/home.component.ts
	modified:   public/index.html
	new file:   public/npm-debug.log
	modified:   server.js

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/Rx.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/angular2.dev.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/router.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/http.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -31,32 +32,7 @@
 
   <!-- 3. Display the application -->
   <body>
-		<div class="ui menu">
-			<div class="ui container">
-				<div class="header item">
-					ergo
-				</div>
-				<div class="right menu">
-					<a class="item">
-						My arguments
-					</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="ui grid container">
-			<div class="row">
-				<div class="column">
-					<div class="content">
-						<app>
-							Loading...
-						</app>
-				</div>
-			</div>
-			</div>
-		</div>
-	</div>
-	
+		<app>Loading...</app>
   </body>
 
 </html>
