--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
 
     <!-- 1. Load libraries -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/angular2-polyfills.js"></script>
-    <script src="app/lib/systemjs/system.src.js"></script>
+    <script src="lib/systemjs/system.src.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/Rx.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/angular2.dev.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/router.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/2.0.0-beta.0/http.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.7/semantic.min.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
